--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "postcss": "8.3.11",
         "resolve-url-loader": "4.0.0",
         "sass": "1.43.4",
-        "sass-loader": "12.3.0"
+        "sass-loader": "12.3.0",
+        "webpack": "^5.64.0"
     }
 }
