--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "0.24.0",
-        "bootstrap": "4.6.1",
-        "bootstrap-select": "1.13.18",
-        "bootstrap4-toggle": "3.6.1",
-        "cross-env": "7.0.3",
-        "dropzone": "5.9.3",
-        "font-awesome": "4.7.0",
-        "jquery": "3.6.0",
-        "laravel-mix": "6.0.38",
-        "lodash": "4.17.21",
-        "popper.js": "1.16.1",
-        "postcss": "8.3.11",
-        "resolve-url-loader": "4.0.0",
-        "sass": "1.43.4",
-        "sass-loader": "12.3.0",
+        "axios": "^0.24",
+        "bootstrap": "^4.6.1",
+        "bootstrap-select": "^1.13.18",
+        "bootstrap4-toggle": "^3.6.1",
+        "dropzone": "^6.0.0-beta.1",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0.6",
+        "lodash": "^4.17.19",
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^12.3.0",
         "webpack": "^5.64.0"
     }
 }
